# youtube-multiroom-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  alexa_interaction_model.json  build.rs
.github/: renovate.json
.github/workflows/: build-image.yml  lint.yml  release.yml
front/: package-lock.json  package.json  tsconfig.json
front/locales/: en.json  ja.json
front/scripts/: gen-i18n.mjs
front/src/: App.tsx  api.ts  format.ts  hooks.ts  i18n.ts  index.html  index.tsx  manifest.webmanifest  parcel-env.d.ts  styles.css  types.ts
front/src/components/: AddToPlaylistMenu.tsx  AuthModal.tsx  DeviceList.tsx  DownloadList.tsx  Header.tsx  History.tsx  NowPlaying.tsx  PlaybackModeSelector.tsx  PreviewPlayer.tsx  ScrollingText.tsx  SeekBar.tsx  SleepTimer.tsx  Toast.tsx  TrackRowInfo.tsx  UrlInput.tsx  icons.tsx
locales/: en.json  en.yml  ja.json  ja.yml
src/: alexa.rs  alexa_verify.rs  auth.rs  handlers.rs  i18n.rs  main.rs  state.rs
static/: index.html
