[package]
name = "youtube-multiroom"
version = "1.1.2"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
hmac = "0.13"
openssl = "0.10.81"
redis = { version = "1.0", features = ["connection-manager", "tokio-comp"] }
regex = "1.13.1"
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.7", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.8"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
