[package]
name = "youtube-multiroom"
version = "1.4.4"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
hmac = "0.13"
openssl = "0.10.81"
redis = { version = "1.4.1", features = ["connection-manager", "tokio-comp"] }
regex = "1.13.1"
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls"] }
rust-i18n = "4.2.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11"
time = { version = "0.3.54", features = ["formatting", "parsing"] }
tokio = { version = "1.53.1", features = ["full"] }
tokio-util = { version = "0.7.19", features = ["io"] }
tower-http = { version = "0.7", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
